# lambda_fastapi

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  cdk.json  package.json  run.sh
api/: .gitignore  openapi.yaml  pyproject.toml  run.sh
api/docker/: .env.sample  docker-compose.yaml
api/src/: main.py
api/src/crud/: user.py
api/src/database/: db.py
api/src/database/migrations/: README.md  env.py
api/src/database/migrations/versions/: 1692614019-createusertable.py
api/src/exception/: exception_hander.py  exceptions.py
api/src/models/: __init__.py  mixins.py  user.py
api/src/routers/: user.py
api/src/schemas/: mixin.py  user.py
api/src/setting/: __init__.py  openapi.py  variable.py
api/tests/: conftest.py
api/tests/integration/user/: test_user_get.py  test_user_post.py
lib/: .env.sample.yaml  lambda-fastapi-cdk-stack.ts
test/: cdk-lambda-fastapi-cdk-stack.test.ts
